force-app/main/default/objects/AccountName__c/AccountName__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Account Name</label>
    <nameField>
        <displayFormat>AN-{0000}</displayFormat>
        <label>Account Name Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>