force-app/main/default/objects/AccountName__c/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>BP ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>