force-app/main/default/objects/AccountName__c/fields/BPName__c.field-meta.xml
<CustomField>
    <fullName>BPName__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>BP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>