force-app/main/default/objects/AccountName__c/fields/BPNameForSearch__c.field-meta.xml
<CustomField>
    <fullName>BPNameForSearch__c</fullName>
    <description>Used to remove the special character of the name fields</description>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(BPName__c, &apos;\&apos;&apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;), &apos; &apos;,&apos;&apos;)</formula>
    <label>BP Name For Search</label>
    <type>Text</type>
</CustomField>