force-app/main/default/objects/AccountName__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>