force-app/main/default/objects/AccountName__c/fields/TermDate__c.field-meta.xml
<CustomField>
    <fullName>TermDate__c</fullName>
    <description>PacPoint-FT041820- Created for PVL phase 1</description>
    <label>Term Date</label>
    <type>Date</type>
</CustomField>