force-app/main/default/objects/AccountName__c/listViews/All_Account_Names.listView-meta.xml
<ListView>
    <fullName>All_Account_Names</fullName>
    <columns>NAME</columns>
    <columns>BPID__c</columns>
    <columns>BPName__c</columns>
    <columns>NameType__c</columns>
    <columns>Account__c</columns>
    <columns>EffectiveDate__c</columns>
    <columns>TermDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Account Names</label>
</ListView>