force-app/main/default/objects/AccountName__c/listViews/Complaints_BREG_AccountName.listView-meta.xml
<ListView>
    <fullName>Complaints_BREG_AccountName</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaints BREG</label>
    <queue>Complaints_BREG</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>