force-app/main/default/objects/AccountName__c/listViews/Complaints_DFI_AccountName.listView-meta.xml
<ListView>
    <fullName>Complaints_DFI_AccountName</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaints DFI</label>
    <queue>Complaints_DFI</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>