force-app/main/default/objects/AccountName__c/listViews/Complaints_DO_AccountName.listView-meta.xml
<ListView>
    <fullName>Complaints_DO_AccountName</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaints DO</label>
    <queue>Complaints_DO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>