force-app/main/default/objects/AccountName__c/listViews/Complaints_General_AccountName.listView-meta.xml
<ListView>
    <fullName>Complaints_General_AccountName</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaints General</label>
    <queue>Complaints_General</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>