force-app/main/default/objects/AccountName__c/listViews/Complaints_INS_AccountName.listView-meta.xml
<ListView>
    <fullName>Complaints_INS_AccountName</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaints INS</label>
    <queue>Complaints_INS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>