force-app/main/default/objects/AccountName__c/listViews/Complaints_OCP_AccountName.listView-meta.xml
<ListView>
    <fullName>Complaints_OCP_AccountName</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaints OCP</label>
    <queue>Complaints_OCP</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>