force-app/main/default/objects/AccountName__c/listViews/Complaints_RICO_AccountName.listView-meta.xml
<ListView>
    <fullName>Complaints_RICO_AccountName</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaints RICO</label>
    <queue>Complaints_RICO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>